<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:fitsSystemWindows="true">

  <ListPreference
    android:entries="@array/languages"
    android:entryValues="@array/languages_codes"
    android:key="settings_language"
    android:title="@string/settings_choose_language"
    app:iconSpaceReserved="false" />

  <ListPreference
    android:defaultValue="strip"
    android:entries="@array/colors_app"
    android:entryValues="@array/colors_app_values"
    android:key="settings_colors_app"
    android:title="@string/colors_app"
    app:iconSpaceReserved="false" />

  <SwitchPreference
    android:defaultValue="false"
    android:key="settings_fab_expansion_behavior"
    android:summaryOff="@string/settings_fab_expansion_behavior_summary_off"
    android:summaryOn="@string/settings_fab_expansion_behavior_summary_on"
    android:title="@string/settings_fab_expansion_behavior"
    app:iconSpaceReserved="false" />

  <SwitchPreference
    android:defaultValue="false"
    android:key="settings_attachments_on_bottom"
    android:summaryOff="@string/settings_attachments_on_bottom_summary_off"
    android:summaryOn="@string/settings_attachments_on_bottom_summary_on"
    android:title="@string/settings_attachments_on_bottom"
    app:iconSpaceReserved="false" />

  <SwitchPreference
    android:defaultValue="true"
    android:key="settings_prettified_dates"
    android:summaryOff="@string/settings_prettified_dates_summary_off"
    android:summaryOn="@string/settings_prettified_dates_summary_on"
    android:title="@string/settings_prettified_dates"
    app:iconSpaceReserved="false" />

</PreferenceScreen>
