<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:fitsSystemWindows="true">

  <SwitchPreference
    android:defaultValue="true"
    android:key="acra.enable"
    android:summaryOff="@string/settings_error_reporting_summary_off"
    android:summaryOn="@string/settings_error_reporting_summary_on"
    android:title="@string/settings_error_reporting"
    app:iconSpaceReserved="false" />

  <SwitchPreference
    android:defaultValue="false"
    android:key="settings_enable_file_logging"
    android:summary="@string/settings_enable_file_logging_summary"
    android:title="@string/settings_enable_file_logging"
    app:iconSpaceReserved="false" />

</PreferenceScreen>
